--- a/disruption indicators.ipynb
+++ b/disruption indicators.ipynb
@@ -190,10 +190,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 新指标2直接计算\n",
-    "# M_s: 相对于知识来源的创新\n",
-    "# M_p：对于生长路径的影响\n",
-    "# w：目标文献与同年份所发表文献的相对影响\n",
     "import numpy as np\n",
     "from itertools import combinations\n",
     "\n",
@@ -348,7 +344,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DI5 不控制引文窗口\n",
     "# fp: focus paper\n",
     "# sp: source paper\n",
     "\n",
@@ -406,7 +401,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# DI1 不控制引文窗口\n",
     "# fp: focus paper\n",
     "# sp: source paper\n",
     "\n",
@@ -427,7 +421,7 @@
     "    pub_year = pmid_year_dict[str(node)]\n",
     "    \n",
     "    if len(citing_nodes_fp) == 0 or len(cited_nodes) == 0:\n",
-    "        continue #如果没有参考文献或者施引文献就跳出这轮循环\n",
+    "        continue \n",
     "    \n",
     "    citing_nodes_sp = []\n",
     "    for s in cited_nodes:\n",
