Update Figures and tables.ipynb

--- a/Figures and tables.ipynb
+++ b/Figures and tables.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prize papers\n",
+    "# highly cited papers\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -101,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prize papers\n",
+    "# faculty papers\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# science papers\n",
+    "# Science papers\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -330,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# science papers\n",
+    "# Science papers\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -357,7 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prize papers\n",
+    "# Prize papers\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -384,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# highly cited papers\n",
+    "# Highly cited papers\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -411,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# faculty papers\n",
+    "# Faculty papers\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -934,7 +934,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Science breakthrough\n",
+    "# Science papers \n",
     "import numpy as np\n",
     "import pickle\n",
     "import pandas as pd\n",
@@ -1118,7 +1118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  Science breakthrough papers\n",
+    "#  Science papers\n",
     "import numpy as np\n",
     "import pickle\n",
     "import pandas as pd\n",
@@ -1208,7 +1208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  Highly cited papers\n",
+    "#  Faculty papers\n",
     "import numpy as np\n",
     "import pickle\n",
     "import pandas as pd\n",
@@ -1245,7 +1245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Science Breakthrough papers\n",
+    "# Science papers\n",
     "import numpy as np\n",
     "import pickle\n",
     "import pandas as pd\n",
@@ -1283,7 +1283,7 @@
    "source": [
     "from scipy import stats\n",
     "\n",
-    "print(stats.levene(D_test, D_control))    ### p >> 0.05，认为具有方差齐性，equal_var = True; 否则equal_var = False\n",
+    "print(stats.levene(D_test, D_control))    ### p >> 0.05，homogeneity of variances，equal_var = True; otherwise, heterocedasticity, equal_var = False\n",
     "print(stats.ttest_ind(D_test, D_control, equal_var = False))"
    ]
   },
@@ -1331,7 +1331,7 @@
    "source": [
     "from scipy import stats\n",
     "\n",
-    "print(stats.levene(D_test2, D_control2)) ### p >> 0.05，认为具有方差齐性，equal_var = True; 否则equal_var = False\n",
+    "print(stats.levene(D_test2, D_control2)) ### p >> 0.05，homogeneity of variances，equal_var = True; otherwise, heterocedasticity, equal_var = False\n",
     "print(stats.ttest_ind(D_test2, D_control2, equal_var = True))"
    ]
   },
@@ -1379,7 +1379,7 @@
    "source": [
     "from scipy import stats\n",
     "\n",
-    "print(stats.levene(D_test3, D_control3)) ### p >> 0.05，认为具有方差齐性，equal_var = True; 否则equal_var = False\n",
+    "print(stats.levene(D_test3, D_control3)) ### p >> 0.05，homogeneity of variances，equal_var = True; otherwise, heterocedasticity, equal_var = False\n",
     "print(stats.ttest_ind(D_test3, D_control3, equal_var = False))"
    ]
   },
@@ -1427,7 +1427,7 @@
    "source": [
     "from scipy import stats\n",
     "\n",
-    "print(stats.levene(D_test4, D_control4))   ### p >> 0.05，认为具有方差齐性，equal_var = True; 否则equal_var = False\n",
+    "print(stats.levene(D_test4, D_control4))   ### p >> 0.05，homogeneity of variances，equal_var = True; otherwise, heterocedasticity, equal_var = False\n",
     "print(stats.ttest_ind(D_test4, D_control4, equal_var = False))"
    ]
   },
